--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,12 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  overflow-y: hidden;
+  /*overflow-y: hidden;*/
 }
 
 
 @media only screen and (max-width: 550px) {
-  
+
   body {
     overflow-y: visible;
   }
